Added trusty repos.

--- a/config/ubuntu.cfg
+++ b/config/ubuntu.cfg
@@ -17,6 +17,7 @@ DISTs+=( lucid lucid-updates )
 DISTs+=( precise precise-updates precise-backports )
 DISTs+=( quantal quantal-updates quantal-backports )
 DISTs+=( raring  raring-updates  raring-backports  )
+DISTs+=( trusty  trusty-updates  trusty-backports  )
 
 declare -A DIST_COMPONENTs
 DIST_COMPONENTs["lucid"]="main multiverse restricted universe"
@@ -33,6 +34,10 @@ DIST_COMPONENTs["quantal-backports"]="main multiverse restricted universe"
 DIST_COMPONENTs["raring"]="main multiverse restricted universe"
 DIST_COMPONENTs["raring-updates"]="main multiverse restricted universe"
 DIST_COMPONENTs["raring-backports"]="main multiverse restricted universe"
+
+DIST_COMPONENTs["trusty"]="main multiverse restricted universe"
+DIST_COMPONENTs["trusty-updates"]="main multiverse restricted universe"
+DIST_COMPONENTs["trusty-backports"]="main multiverse restricted universe"
 
 # Optional fetch configuration
 FETCH_I18N="yes"        # Fetch translations
