Config reorganiztion and renewal

--- a/config.examples/archlinux.cfg
+++ b/config.examples/archlinux.cfg
@@ -1,12 +1,12 @@
+# Source common config
+source "$(dirname $(readlink -f "${BASH_SOURCE[0]}"))/common.cfg"
+
 # Sync source
 UPSTREAM="mirror.yandex.ru"
 UPSTREAM_DIR="archlinux"
 
 # Sync destination directory
-LOCAL_DIR="/srv/www/mirror/archlinux"
-
-# Local mirror Fully Qualified Domain Name
-LOCAL_FQDN="mirror.local.domain"
+LOCAL_DIR="${MIRROR_ROOT:-"/srv/www/mirror"}/archlinux"
 
 # What parts to sync
 ARCHs=( i686 x86_64 )
@@ -16,4 +16,4 @@ REPOs=( core extra testing community community-testing )
 DEBUG="yes"
 QUIET="yes"
 DISABLE_CLEANUP="no"
-LOG_FILE="/var/log/mirror-sync/archlinux-update.log"
+LOG_FILE="${LOG_ROOT:-"/var/log/mirror-sync"}/archlinux-update.log"
