--- a/config.examples/debian.cfg
+++ b/config.examples/debian.cfg
@@ -1,17 +1,17 @@
+# Source common config
+source "$(dirname $(readlink -f "${BASH_SOURCE[0]}"))/common.cfg"
+
 # Sync source
-UPSTREAM="ftp.ru.debian.org"
+UPSTREAM="ftp.debian.org"
 UPSTREAM_DIR="debian"
 
 # Sync destination
-LOCAL_DIR="/srv/www/mirror/debian"
-
-# Local Fully Qualified Domain Name
-LOCAL_FQDN="mirror.local.domain"
+LOCAL_DIR="${MIRROR_ROOT:-"/srv/www/mirror"}/debian"
 
 # What parts to sync
 I18Ns=( en ru )         # Translations, don't delete english, it will break repo
 ARCHs=( amd64 i386 all )
-DISTs=( squeeze squeeze-updates wheezy wheezy-updates wheezy-backports sid )
+DISTs=( squeeze squeeze-updates wheezy wheezy-updates wheezy-backports jessie sid )
 
 declare -A DIST_COMPONENTs
 DIST_COMPONENTs["squeeze"]="main contrib non-free"
@@ -19,6 +19,7 @@ DIST_COMPONENTs["squeeze-updates"]="main contrib non-free"
 DIST_COMPONENTs["wheezy"]="main contrib non-free"
 DIST_COMPONENTs["wheezy-updates"]="main contrib non-free"
 DIST_COMPONENTs["wheezy-backports"]="main contrib non-free"
+DIST_COMPONENTs["jessie"]="main contrib non-free"
 DIST_COMPONENTs["sid"]="main contrib non-free"
 
 # Optional fetch configuration
@@ -26,10 +27,10 @@ FETCH_I18N="yes"        # Fetch translations
 FETCH_SOURCES="yes"     # Fetch packages sources
 FETCH_CONTENTS="yes"    # Fetch 'Contents' file fof distro
 FETCH_INSTALLER="yes"   # Fetch separate 'debian-installer' component
-FETCH_DIFF="yes"        # Fetch diffs of 'Packages'
+FETCH_DIFF="yes"        # Fetch diffs of 'Packages' (speed's up client update)
 
 # Misc
 DEBUG="yes"
 QUIET="yes"
 DISABLE_CLEANUP="no"
-LOG_FILE="/var/log/mirror-sync/debian-update.log"
+LOG_FILE="${LOG_ROOT:-"/var/log/mirror-sync"}/debian-update.log"
