Config update and gitignoring.

--- a/config.examples/debian.cfg
+++ b/config.examples/debian.cfg
@@ -20,6 +20,8 @@ DIST_COMPONENTs["wheezy"]="main contrib non-free"
 DIST_COMPONENTs["wheezy-updates"]="main contrib non-free"
 DIST_COMPONENTs["wheezy-backports"]="main contrib non-free"
 DIST_COMPONENTs["jessie"]="main contrib non-free"
+DIST_COMPONENTs["jessie-updates"]="main contrib non-free"
+DIST_COMPONENTs["jessie-backports"]="main contrib non-free"
 DIST_COMPONENTs["sid"]="main contrib non-free"
 
 # Optional fetch configuration
